--- a/PickTimeOutCompany/Views/Home/Login.cshtml
+++ b/PickTimeOutCompany/Views/Home/Login.cshtml
@@ -142,7 +142,7 @@
         width: 70%;
         padding: 0px;
         height: 87vh;
-        background: url('../../Content/login.jpg') center no-repeat;
+        /*background: url('../../Content/login.jpg') center no-repeat;*/
         background-size: cover;
         display: flex;
         flex-wrap: wrap;
@@ -197,18 +197,18 @@
 <section class="vh-100">
     <div id="login-page" class="container-fluid h-custom">
         <div class="row d-flex justify-content-center align-items-center h-100">
-            <h2 class="login-title">login</h2>
+            <h2 class="login-title">Login</h2>
             <form method="post" class="form-login" action="~/home/login">
                 <div class="input-account">
                     <i class="fas fa-envelope icon"></i>
-                    <input type="userid" name="userid" placeholder="portal account" required>
+                    <input type="userid" name="userid" placeholder="Portal Account" required>
                 </div>
                 <div class="input-password">
                     <i class="fas fa-lock icon"></i>
-                    <input type="password" name="password" placeholder="password" required>
+                    <input type="password" name="password" placeholder="Password" required>
                 </div>
 
-                <button type="submit"><i class="fas fa-door-open"></i>log in now</button>
+                <button type="submit"><i class="fas fa-door-open"></i>Log in now</button>
             </form>
         </div>
         <div class="background">
