--- a/PickTimeOutCompany/Views/Home/_LayoutLogin.cshtml
+++ b/PickTimeOutCompany/Views/Home/_LayoutLogin.cshtml
@@ -9,11 +9,12 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
+@*<body style="background-image: url('/Background/background_TimeoutWeb.jpg'); background-size: cover;">*@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">TimeOut Web</a>
+                <a class="navbar-brand" href="#">登記平台</a>
             </div>
             @*<div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -35,7 +36,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - WMS Web, Design by SFCS.</p>
+            <p>&copy; @DateTime.Now.Year - Design by SI.</p>
         </footer>
     </div>
 
