--- a/PickTimeOutCompany/Views/DataForHR/DataForHR.cshtml
+++ b/PickTimeOutCompany/Views/DataForHR/DataForHR.cshtml
@@ -27,8 +27,8 @@
                 <tr>
                     <th>Thời Gian</th>
                     <th>Tiến Lộc (近禄)</th>
-                    <th>Thành Đạt (诚达)</th>
-                    <th>Bảo Sơn (宝山)</th>
+                    <th>Thành Đạt (誠達)</th>
+                    <th>Bảo Sơn (寶山)</th>
                 </tr>
                 <tbody id="DataCountTime">
                     @Html.Raw(ViewBag.HtmlCountTime)
