--- a/PickTimeOutCompany/Views/VehicleDispatch/VehicleDispatch.cshtml
+++ b/PickTimeOutCompany/Views/VehicleDispatch/VehicleDispatch.cshtml
@@ -348,17 +348,17 @@
             var currentHours = today.getHours();
             var currentMinutes = today.getMinutes();
             if (today.getDay() === 6) {
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" value="17:10" style="width:20px;"> <label>17:10</label></label>');
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" value="20:00" style="width:20px;"> <label>20:00</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time1" value="17:10" style="width:20px;"> <label>17:10</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time2" value="20:00" style="width:20px;"> <label>20:00</label></label>');
             }
             else {
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" value="17:50" style="width:20px;"> <label>17:50</label></label>');
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" value="19:00" style="width:20px;"> <label>19:00</label></label>');
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" value="20:30" style="width:20px;"> <label>20:30</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time1" value="17:50" style="width:20px;"> <label>17:50</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time2" value="19:00" style="width:20px;"> <label>19:00</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time3" value="20:30" style="width:20px;"> <label>20:30</label></label>');
             }
-            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" value="THANH DAT" style="width:20px;"> <label>誠達</label></label>');
-            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" value="BAO SON" style="width:20px;"> <label>寶山</label></label>');
-            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" value="TIEN LOC" style="width:20px;"> <label>近禄</label></label>');
+            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" id="address1" value="THANH DAT" style="width:20px;"> <label>誠達</label></label>');
+            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" id="address2" value="BAO SON" style="width:20px;"> <label>寶山</label></label>');
+            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" id="address3" value="TIEN LOC" style="width:20px;"> <label>近禄</label></label>');
 
 
 
@@ -384,6 +384,21 @@
             //    //}
             //});
         });
+
+        function checkTime() {
+            var today = new Date();  // Lấy ngày hiện tại
+            var currentHours = today.getHours();
+            var currentMinutes = today.getMinutes();
+            document.querySelectorAll("input[name='time']").forEach(radio => {
+                var radioTime = radio.value.split(":");
+                var radioHours = parseInt(radioTime[0], 10);
+                var radioMinutes = parseInt(radioTime[1], 10);
+                console.log(radioHours, currentHours);
+                if (radioHours > currentHours || (radioHours === currentHours && radioMinutes <= currentMinutes)) {
+                    radio.disabled = true;
+                }
+            });
+        }
 
         function updateTable() {
             $.ajax({
@@ -491,6 +506,43 @@
             }
         });
 
+        $(document).ready(function () {
+            document.querySelectorAll('input[name="time"]').forEach(radio => {
+                radio.addEventListener("change", function () {
+                    if (this.checked) {
+                        if (radio.id === "time1") {
+                            document.getElementById("supermarket").disabled = true;
+                        }
+                        else if (getSelectedRadioValue("address") !== "THANH DAT") {
+                            document.getElementById("supermarket").disabled = false;
+                        }
+                    }
+                });
+            });
+            document.querySelectorAll('input[name="address"]').forEach(radio => {
+                radio.addEventListener("change", function () {
+                    if (this.checked) {
+                        if (radio.id === "address1") {
+                            document.getElementById("supermarket").disabled = true;
+                        }
+                        else if (getSelectedRadioValue("time") !== "17:50" && getSelectedRadioValue("time") !== "17:10") {
+                            document.getElementById("supermarket").disabled = false;
+                        }
+                    }
+                });
+            });
+            document.getElementById("supermarket").addEventListener("change", function () {
+                if (this.checked) {
+                    document.getElementById("time1").disabled = true;
+                    document.getElementById("address1").disabled = true;
+                }
+                else {
+                    document.getElementById("time1").disabled = false;
+                    document.getElementById("address1").disabled = false;
+                }
+            });
+        })
+
         document.getElementById("btnUpdate").addEventListener("click", function () {
             document.querySelectorAll('input[name="time"]').forEach(radio => {
                 radio.disabled = false;
@@ -502,6 +554,16 @@
             document.getElementById("btnUpdate").style.display = "none";
             document.getElementById("updateStatus").style.display = "none";
             document.getElementById("btnOK").style.display = "block";
+            if (document.getElementById("supermarket").checked) {
+                document.getElementById("time1").disabled = true;
+                document.getElementById("address1").disabled = true;
+            }
+            if (document.getElementById("time1").checked) {
+                document.getElementById("supermarket").disabled = true;
+            }
+            if (document.getElementById("address1").checked) {
+                document.getElementById("supermarket").disabled = true;
+            }
             //document.querySelectorAll("input[name='time']").forEach(radio => radio.checked = false);
         });
 
