--- a/PickTimeOutCompany/Views/DataForHR/DataForHR.cshtml
+++ b/PickTimeOutCompany/Views/DataForHR/DataForHR.cshtml
@@ -39,7 +39,7 @@
 
         <!-- Button Export Excel -->
         @*<button id="exportExcel" class="btn btn-success">Export To Excel</button>*@
-        <button id="btnExportExcel" class="btn btn-success" style="background-color: #8e6d11; border:none">Export to Excel</button>
+        <button id="btnExportExcel" class="btn btn-success" style="background-color: #11728c; border: none">Export to Excel</button>
 
         <div class="table-data">
             <table class="table table-striped table-class " id="PickInfo">
