--- a/PickTimeOutCompany/Views/VehicleDispatch/VehicleDispatch.cshtml
+++ b/PickTimeOutCompany/Views/VehicleDispatch/VehicleDispatch.cshtml
@@ -288,6 +288,17 @@
     string userIDinView = ViewBag.userID;
 }
 <h4> @usernameinView - @userIDinView </h4>
+<div>
+    <button id="btnToday" style="padding: 10px 20px; background-color: gray; color: white; border: none; border-radius: 5px; cursor: pointer; width:150px;">
+        @{ var today = DateTime.Now.ToString("yyyy/MM/dd"); }@today
+    </button>
+    <button id="btnNextday" style="padding: 10px 20px; background-color: gray; color: white; border: none; border-radius: 5px; cursor: pointer; width: 150px;">
+        @{ var nextDay = DateTime.Now.AddDays(1).ToString("yyyy/MM/dd"); }@nextDay
+    </button>
+    <button id="btnNextTomorrow" style="padding: 10px 20px; background-color: gray; color: white; border: none; border-radius: 5px; cursor: pointer; width: 150px; ">
+        @{ var nextTomorrowDay = DateTime.Now.AddDays(2).ToString("yyyy/MM/dd"); }@nextTomorrowDay
+    </button>
+</div>
 
 <br />
 <div style="display: flex; justify-content: space-between; gap: 20px; margin-bottom: 15px;">
@@ -313,10 +324,10 @@
 
         <div style="margin-top: 20px; display:flex; gap:10px;">
             <!-- Div chứa hai button -->
-            <button id="btnOK" style="padding: 10px 20px; background-color: #8e6d11; color: white; border: none; border-radius: 5px; cursor: pointer;">
+            <button id="btnOK" style="padding: 10px 20px; background-color: #11728c; color: white; border: none; border-radius: 5px; cursor: pointer; ">
                 OK
             </button>
-            <button id="btnUpdate" style="padding: 10px 20px; background-color: #8e6d11; color: white; border: none; border-radius: 5px; cursor: pointer; ">
+            <button id="btnUpdate" style="padding: 10px 20px; background-color: #11728c; color: white; border: none; border-radius: 5px; cursor: pointer; ">
                 Edit
             </button>
             <label id="updateStatus" style="display:none; font-size:30px">登記成功</label>
@@ -343,32 +354,34 @@
 </div>
 @section Scripts{
     <script>
+        var selectedDate = "@today";
         $(document).ready(function () {
+            document.getElementById("btnToday").click();
             var today = new Date();  // Lấy ngày hiện tại
             var currentHours = today.getHours();
             var currentMinutes = today.getMinutes();
             if (today.getDay() === 6) {
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time1" value="17:10" style="width:20px;"> <label>17:10</label></label>');
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time2" value="20:00" style="width:20px;"> <label>20:00</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time1" value="17:10" style="width:20px;"> <label for="time1">17:10</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time2" value="20:00" style="width:20px;"> <label for="time2">20:00</label></label>');
             }
             else {
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time1" value="17:50" style="width:20px;"> <label>17:50</label></label>');
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time2" value="19:00" style="width:20px;"> <label>19:00</label></label>');
-                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time3" value="20:30" style="width:20px;"> <label>20:30</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time1" value="17:50" style="width:20px;"> <label for="time1">17:50</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time2" value="19:00" style="width:20px;"> <label for="time2">19:00</label></label>');
+                $("#listTime").append('<label style="width:140px;"><input type="radio" name="time" id="time3" value="20:30" style="width:20px;"> <label for="time3">20:30</label></label>');
             }
-            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" id="address1" value="THANH DAT" style="width:20px;"> <label>誠達</label></label>');
-            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" id="address2" value="BAO SON" style="width:20px;"> <label>寶山</label></label>');
-            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" id="address3" value="TIEN LOC" style="width:20px;"> <label>近禄</label></label>');
+            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" id="address1" value="THANH DAT" style="width:20px;"> <label for="address1">誠達</label></label>');
+            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" id="address2" value="BAO SON" style="width:20px;"> <label for="address2">寶山</label></label>');
+            $("#listAddress").append('<label style="width:140px;"><input type="radio" name="address" id="address3" value="TIEN LOC" style="width:20px;"> <label for="address3">近禄</label></label>');
 
 
 
-            let selectedAddress = "@(ViewBag.selectedAddress ?? "")";
+            @*let selectedAddress = "@(ViewBag.selectedAddress ?? "")";
             setRadioValue("address", selectedAddress);
             let selectedTimout = "@(ViewBag.selectedTimeout ?? "")";
             setRadioValue("time", selectedTimout);
             if ("@ViewBag.selectedSupermarket" === "Y") {
                 document.getElementById("supermarket").checked = true; // Nếu Y, checkbox sẽ được check
-            }
+            }*@
             updateTable();
             //document.querySelectorAll("input[name='time']").forEach(radio => {
             //    var radioTime = radio.value.split(":"); // Giả sử value có định dạng "HH:MM"
@@ -393,7 +406,7 @@
                 var radioTime = radio.value.split(":");
                 var radioHours = parseInt(radioTime[0], 10);
                 var radioMinutes = parseInt(radioTime[1], 10);
-                console.log(radioHours, currentHours);
+                //console.log(radioHours, currentHours);
                 if (radioHours > currentHours || (radioHours === currentHours && radioMinutes <= currentMinutes)) {
                     radio.disabled = true;
                 }
@@ -408,7 +421,7 @@
                 success: function (data) {
                     var tableBody = $('#dataBody');
                     tableBody.empty();
-                    console.log(data);
+                    //console.log(data);
                     if (data.length === 0) {
                         document.querySelectorAll('input[name="time"]').forEach(radio => {
                             radio.disabled = false;
@@ -477,33 +490,79 @@
             return checkbox.checked ? "Y" : "N";
         }
 
-        document.getElementById("btnOK").addEventListener("click", function () {
-            if (checkRadio("time")) {
-                alert("Please select Time Out!");
-            }
-            else if (checkRadio("address")) {
-                alert("Please select address!")
-            }
-            else {
-                $.ajax({
-                    url: "/VehicleDispatch/InsertData",
-                    type: "GET", // Gửi bằng phương thức GET
-                    data: { timeout: getSelectedRadioValue("time"), address: getSelectedRadioValue("address"), checkbox: checkCheckbox()},
-                    dataType: "json",
-                    success: function (result) {
-                        if (result.redirectUrl != null) {
-                            window.location.href = result.redirectUrl;
-                        }
-                        document.getElementById("updateStatus").style.display = "block";
-                        document.getElementById("updateStatus").style.color = "green";
-                        console.log("Update successfully.");
-                        updateTable();
-                    },
-                    error: function (xhr, status, error) {
-                        console.error("Lỗi thêm dữ liệu:", error);
+        function selectDateButton(date) {
+            $.ajax({
+                url: "/VehicleDispatch/getSelectedbyDate",
+                type: "GET",
+                data: { date_out: date },
+                dataType: "json",
+                success: function (result) {
+                    if (result.length === 0) {
+                        document.querySelectorAll('input[name="time"]').forEach(radio => {
+                            radio.disabled = false;
+                            radio.checked = false
+                        });
+                        document.querySelectorAll('input[name="address"]').forEach(radio => {
+                            radio.disabled = false;
+                            radio.checked = false
+                        });
+                        document.getElementById("btnUpdate").style.display = "none";
+                        document.getElementById("btnOK").style.display = "block";
+                        document.getElementById("supermarket").checked = false;
+                        document.getElementById("supermarket").disabled = false;
                     }
-                });
-            }
+                    else {
+                        result.forEach(item => {
+                            let selectedAddress = item.Address;
+                            setRadioValue("address", selectedAddress);
+                            let selectedTimout = item.Time;
+                            setRadioValue("time", selectedTimout);
+                            if (item.Supermarket === "Y") {
+                                document.getElementById("supermarket").checked = true; // Nếu Y, checkbox sẽ được check
+                            }
+                            else {
+                                document.getElementById("supermarket").checked = false;
+                            }
+                        });
+                        document.querySelectorAll('input[name="time"]').forEach(radio => {
+                            radio.disabled = true;
+                        });
+                        document.querySelectorAll('input[name="address"]').forEach(radio => {
+                            radio.disabled = true;
+                        });
+                        document.getElementById("supermarket").disabled = true;
+                        document.getElementById("btnOK").style.display = "none";
+                        document.getElementById("btnUpdate").style.display = "block";
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error("Lỗi thêm dữ liệu:", error);
+                }
+            });
+        };
+
+        document.getElementById("btnToday").addEventListener("click", function () {
+            selectedDate = "@today";
+            this.style.backgroundColor = "#11728c";
+            document.getElementById("btnNextday").style.backgroundColor = "gray";
+            document.getElementById("btnNextTomorrow").style.backgroundColor = "gray";
+            selectDateButton(selectedDate);
+        });
+
+        document.getElementById("btnNextday").addEventListener("click", function () {
+            selectedDate = "@nextDay";
+            this.style.backgroundColor = "#11728c";
+            document.getElementById("btnToday").style.backgroundColor = "gray";
+            document.getElementById("btnNextTomorrow").style.backgroundColor = "gray";
+            selectDateButton(selectedDate);
+        });
+
+        document.getElementById("btnNextTomorrow").addEventListener("click", function () {
+            selectedDate = "@nextTomorrowDay";
+            this.style.backgroundColor = "#11728c";
+            document.getElementById("btnToday").style.backgroundColor = "gray";
+            document.getElementById("btnNextday").style.backgroundColor = "gray";
+            selectDateButton(selectedDate);
         });
 
         $(document).ready(function () {
@@ -541,7 +600,36 @@
                     document.getElementById("address1").disabled = false;
                 }
             });
-        })
+        });
+
+        document.getElementById("btnOK").addEventListener("click", function () {
+            if (checkRadio("time")) {
+                alert("Please select Time Out!");
+            }
+            else if (checkRadio("address")) {
+                alert("Please select address!")
+            }
+            else {
+                $.ajax({
+                    url: "/VehicleDispatch/InsertData",
+                    type: "GET", // Gửi bằng phương thức GET
+                    data: { timeout: getSelectedRadioValue("time"), address: getSelectedRadioValue("address"), checkbox: checkCheckbox(), selectedDate: selectedDate },
+                    dataType: "json",
+                    success: function (result) {
+                        if (result.redirectUrl != null) {
+                            window.location.href = result.redirectUrl;
+                        }
+                        document.getElementById("updateStatus").style.display = "block";
+                        document.getElementById("updateStatus").style.color = "green";
+                        console.log("Update successfully.");
+                        updateTable();
+                    },
+                    error: function (xhr, status, error) {
+                        console.error("Lỗi thêm dữ liệu:", error);
+                    }
+                });
+            }
+        });
 
         document.getElementById("btnUpdate").addEventListener("click", function () {
             document.querySelectorAll('input[name="time"]').forEach(radio => {
