--- a/PickTimeOutCompany/Views/Shared/_Layout.cshtml
+++ b/PickTimeOutCompany/Views/Shared/_Layout.cshtml
@@ -81,10 +81,10 @@
 
         .sidebar-header {
             display: grid;
-            grid-template-columns: auto 1fr; /* Cột đầu nhỏ, cột sau lớn */
+            grid-template-columns: auto 1fr;
             align-items: center;
             padding-left: 10px;
-            gap: 10px; /* Khoảng cách giữa button và logo */
+            gap: 10px;
         }
 
         .sidebar.collapsed .toggle-btn {
