--- a/PickTimeOutCompany/Views/VehicleDispatch/VehicleDispatch.cshtml
+++ b/PickTimeOutCompany/Views/VehicleDispatch/VehicleDispatch.cshtml
@@ -79,6 +79,7 @@
 
     .container {
         width: 100%;
+        padding-left:0px;
     }
 
     .img-left {
@@ -359,7 +360,7 @@
 
 <br />
 <div style="display: flex; justify-content: space-between; gap: 20px; margin-bottom: 15px;">
-    <div style="margin-left:40px;">
+    <div>
         <div id="divTime">
             <div style="display: flex;">
                 <label style="width:60px;">班次:</label>
@@ -393,8 +394,8 @@
 </div>
 
 <br />
-<div class="container-fluid" style="border: 2px solid white; padding: 10px; border-radius: 20px; overflow: hidden;">
-    <table id="reportTable" class="table" style="border-radius: 0px; border: 2px solid white;">
+<div class="container-fluid" style="border: 1px solid darkgray; padding: 10px; border-radius: 20px; overflow: hidden; ">
+    <table id="reportTable" class="table" style="border-radius: 0px; border: 1px solid darkgray;">
         <thead style="position: sticky; top: 0; z-index: 1; height: 30px; line-height: 30px; background-color: #7F886A; text-align: center;">
             <tr style="text-align: center; color: white; ">
                 <th class="border border-white" style="text-align: center;">Date Out</th>
